syntax = "proto3";

import "google/protobuf/timestamp.proto";

package proto.playground;

service Games {
    rpc CreateGame (CreateGameRequest) returns (Game);
    rpc GetGameDetails (GetGameDetailsRequest) returns (GameDetails);
    rpc ListGames (ListGamesRequest) returns (ListGamesResponse);
}

message CreateGameRequest {
}

message GetGameDetailsRequest {
    string game_id = 1;
}

message ListGamesRequest {
}

message ListGamesResponse {
    repeated Game games = 1;
}

message Game {
    string id = 1;

    google.protobuf.Timestamp start_time = 2;
}

message GameDetails {
    string game_id = 1;
    string winner = 2;
    string player = 3;
    int32 player_points_to_win = 4;
    repeated Round rounds = 5;
    repeated PlayerDetails player_details = 6;
}

message PlayerDetails {
    int32 points_to_win = 1;
    string name = 2;
}

message Round {
    int32 number = 1;
    repeated Point points = 2;
}

message Point {
    int32 value = 1;
    PointKind kind = 2;
}

enum PointKind {
    POINT_KIND_UNSET = 0;
    POINT_KIND_SCORE = 1;
    POINT_KIND_OVERTHROW = 2;
}
